Дипломный проект 2 часть